# PyCharmProject2

./: .env.example  README.md  conftest.py  main.py  pyproject.toml  requirements.txt  Заполнили_личные_данные_'API',_'TOKEN'.patch
data/: operations.json.py
src/: decorators.py  external_api.py  finance_reader.py  generators.py  masks.py  processing.py  transaction_stats.py  transaction_utils.py  utils.py  widget.py
tests/: test_decorators.py  test_finance_reader.py  test_generators.py  test_generators_1.py  test_generators_2.py  test_main.py  test_processing.py  test_transaction_stats.py  test_transaction_utils.py  test_utils.py
transactions/: transactions_excel.xlsx
