[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Anton Tumashov <Tumashovster@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^2.1.2"
anyio = "==4.9.0"
build = "==1.2.2.post1"
certifi = "==2025.1.31"
charset-normalizer = "==3.4.1"
cleo = "==2.1.0"
colorama = "==0.4.6"
crashtest = "==0.4.1"
distlib = "==0.3.9"
dulwich = "==0.22.8"
fastjsonschema = "==2.21.1"
filelock = "==3.18.0"
findpython = "==0.6.3"
h11 = "==0.14.0"
httpcore = "==1.0.8"
httpx = "==0.28.1"
idna = "==3.10"
installer = "==0.7.0"
keyring = "==25.6.0"
more-itertools = "==10.6.0"
msgpack = "==1.1.0"
packaging = "==25.0"
pbs-installer = "==2025.4.9"
pkginfo = "==1.12.1.2"
platformdirs = "==4.3.7"
poetry = "==2.1.2"
pyproject-hooks = "==1.2.0"
pywin32-ctypes = "==0.2.3"
requests = "==2.32.3"
requests-toolbelt = "==1.0.0"
shellingham = "==1.5.4"
sniffio = "==1.3.1"
tomlkit = "==0.13.2"
trove-classifiers = "==2025.4.11.15"
urllib3 = "==2.4.0"
virtualenv = "==20.30.0"
zstandard = "==0.23.0"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.isort]
line-length = 119

[tool.black]
line-length = 119
exclude = ".git"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
